choree: move yaml files

--- a/cpd-log/cpd-records/2023/2023-06-01_mentoring.yaml
+++ b/cpd-log/cpd-records/2023/2023-06-01_mentoring.yaml
@@ -1,4 +1,4 @@
-title: Mentoring
+title: Mentoring a junior colleague
 activity_type: Work based learning
 start_date: '2023-06-01'
 end_date: '2023-06-01'
