--- a/cpd-records/2024/2024-01-01_neds-meetups.yaml
+++ b/cpd-records/2024/2024-01-01_neds-meetups.yaml
@@ -3,13 +3,14 @@ activity_type: Professional activity
 start_date: '2024-01-01'
 end_date: '2024-01-01'
 activity_url: ''
-learning_hours: '2'
+learning_hours: '3.5'
 tags: 'meetups'
 activity_description: |
-  I attended (and hosted) North East Data Scientist meetups this year. Talks included ethical AI and large language models (LLMs).
+  I attended (and hosted) North East Data Scientist meetups this year. Talks included ethical AI, large language models (LLMs),  ML ops with Vetiver, and nowcasting and Bayesian modelling in finance.
 benefit_to_practice: |
-  I attended talks in which I learned about numerous topics including how to assess models for biases (Rob Geada, Red Hat) and how to fit and use LLMs, a current hot topic in data science (Mac Misura, NICD).
+  I attended talks in which I learned about numerous topics including how to assess models for biases (Rob Geada, Red Hat) and how to fit and use LLMs, a current hot topic in data science (Mac Misura, NICD). Nowcasting in finance (Conor Goold, Ledger Investing) was particularly relevant to my work at UKHSA as we use similar methodologies for describing and forecasting in epidemics.
 benefit_to_users: |
   As someone who uses statistical/machine learning models in a healthcare setting, understanding ethical AI is really important as healthcare outcomes are a function of social/economic inequalities.
   LLMs have the potential to completely change the way programmers work in the future. Gaining an understanding into them is potentially critical to all future data science work.
 
+  It is also useful to here about modern tooling for nowcasting as this is an active research area for my current team. Reporting on, and understanding, modern methods may be useful for future epidemic/incident response.
